<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00A8F4"
    tools:context=".SelectLunchFragment">

    <TextView
        android:id="@+id/tv_lunch_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lunch_types"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/spinn_lunch_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinn_lunch_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#0022FF"
        android:contentDescription="@string/lunch_type"
        android:dropDownWidth="match_parent"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lunch_types" />

    <TextView
        android:id="@+id/tv_lunch_span_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/lunch_span"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinn_lunch_type" />

    <RadioGroup
        android:id="@+id/rbg_lunch_span"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lunch_span_select">

        <RadioButton
            android:id="@+id/rb_one_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#0022FF"
            android:checked="true"
            android:text="@string/one"
            android:textColor="#000000"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/rb_two_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#0022FF"
            android:checked="false"
            android:text="@string/two"
            android:textColor="#000000"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/rb_all_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#0022FF"
            android:checked="false"
            android:text="@string/all_days"
            android:textColor="#000000"
            android:textSize="30sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_lunch_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="105dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbg_lunch_span" />

    <Button
        android:id="@+id/btn_select_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_lunch_select" />

</androidx.constraintlayout.widget.ConstraintLayout>
