<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LunchList">

    <TextView
        android:id="@+id/tv_lunchList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:text="@string/lunch_list"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_lunch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add_lunch"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_select_lunch"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_select_lunch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/lunch_select"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_remove_lunch"
        app:layout_constraintStart_toEndOf="@+id/btn_add_lunch" />

    <Button
        android:id="@+id/btn_remove_lunch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/remove_lunch"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_select_lunch" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fcv_viewLunchFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_select_lunch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lunchList" />
</androidx.constraintlayout.widget.ConstraintLayout>